--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.1.1",
     "electron": "^2.0.2",
     "marked": "^0.4.0",
+    "mermaid": "^8.0.0-rc.8",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "reactstrap": "^6.1.0",
