--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-register": "^6.26.0",
     "bootstrap": "^4.1.1",
     "electron": "^2.0.2",
+    "mark.js": "^8.11.1",
     "marked": "^0.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
